bit of writing, set up bibtex in Shake

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -205,3 +205,10 @@
   year={2014},
   publisher={University of Pennsylvania}
 }
+
+@phdthesis{norell2007towards,
+  title={Towards a practical programming language based on dependent type theory},
+  author={Norell, Ulf},
+  year={2007},
+  school={Chalmers University of Technology}
+}
