writing & typesetting Agda code

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -212,3 +212,12 @@
   year={2007},
   school={Chalmers University of Technology}
 }
+
+@book{stanley2015catalan,
+  place={Cambridge},
+  title={Catalan Numbers},
+  doi={10.1017/CBO9781139871495},
+  publisher={Cambridge University Press},
+  author={Stanley,Richard P.},
+  year={2015}
+}
