update notation, start writing about EGFs

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -221,3 +221,10 @@
   author={Stanley,Richard P.},
   year={2015}
 }
+
+@book{wilf2005generatingfunctionology,
+  title={generatingfunctionology},
+  author={Wilf, Herbert S},
+  year={2005},
+  publisher={AK Peters/CRC Press}
+}
